# ntn-miniloop

./: .gitignore  README.md  pyproject.toml  run_closed_loop.py
.github/workflows/: refresh-tle-latest.yml
configs/: default.json  flight_corridor_demo.json  road_demo.json  synthetic_multiplane_realistic.json  tle_demo.json  tle_oneweb_large.json  tle_starlink_large.json  tle_starlink_oneweb_mixed.json  waypoint_demo.json
data/tle/: sample_demo.tle
data/tle/snapshots/: latest_snapshot.json  oneweb_2026-04-10.tle  oneweb_2026-04-11.tle  oneweb_2026-04-20.tle  oneweb_2026-05-19.tle  starlink_2026-04-11.tle  starlink_2026-04-20.tle  starlink_2026-05-19.tle  starlink_latest.tle  starlink_oneweb_2026-04-10.tle  starlink_oneweb_2026-04-11.tle  starlink_oneweb_2026-04-20.tle  starlink_oneweb_2026-04-27.tle  starlink_oneweb_2026-05-19.tle  starlink_oneweb_latest.tle
ntn_miniloop/: __init__.py  core.py  env.py  gym_env.py  spaces.py
tools/: fetch_tle_snapshots.py
